--- a/styles/style.css
+++ b/styles/style.css
@@ -83,6 +83,10 @@ nav li a {
     /* width: 584px;*/
     /* height: 500px;  */
     /* margin-left: 00px; */
+    /* position: absolute;*/
+    /* top: 30%;  */
+    /* left: 90%; */
+    /* transform: translate(-50%, -50%); */
 }
 
 .banner-greetings {
@@ -106,7 +110,31 @@ nav li a {
 }
 
 /* Main section Style */
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+}
 
+.about-info-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.info-title {
+    color: #757575;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    /* margin-bottom: 0px; */
+}
+
+.info-description {
+    color: #474747;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 30px;
+    margin-top: 0px;
+}
 
 /* About section style */
 .about-me {
@@ -115,10 +143,50 @@ nav li a {
     margin: 100px 0;
     padding: 130px;
 }
-.section-description{
-    color:  #757575;
+
+.section-description {
+    color: #757575;
     text-align: center;
     font-size: 14px;
     font-weight: 400;
-    line-height: 30px; /* 166.667% */
+    line-height: 30px;
+    /* 166.667% */
+}
+
+#what-i-do-description {
+    padding: 10px 150px;
+}
+
+/* Skill Section */
+.skill-container {
+    display: flex;
+    gap: 24px;
+}
+
+.skill {
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+.skill-title {
+    color: #181818;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.skill-description {
+    color: #757575;
+    font-size: 12px;
+    font-weight: 400;
+    padding: 10px;
+}
+
+/* Resume Section Style */
+.resume-column-title {
+    color: #474747;
+    font-size: 22px;
+    font-weight: 700;
 }
