--- a/styles/style.css
+++ b/styles/style.css
@@ -125,7 +125,7 @@ main {
     text-align: center;
     font-size: 16px;
     font-weight: 400;
-    /* margin-bottom: 0px; */
+    margin-top: 30px;
 }
 
 .info-description {
@@ -133,7 +133,7 @@ main {
     font-size: 18px;
     font-weight: 600;
     line-height: 30px;
-    margin-top: 0px;
+    margin-top: -10px;
 }
 
 /* About section style */
@@ -172,7 +172,7 @@ main {
 
 .skill-title {
     color: #181818;
-    text-align: center;
+    text-align: left;
     font-size: 16px;
     font-weight: 700;
 }
@@ -181,7 +181,7 @@ main {
     color: #757575;
     font-size: 12px;
     font-weight: 400;
-    padding: 10px;
+    /* padding: 0px; */
 }
 
 /* Resume Section Style */
@@ -189,4 +189,32 @@ main {
     color: #474747;
     font-size: 22px;
     font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.resume-container {
+    display: flex;
+    gap: 30px;
+}
+
+.resume-item-title {
+    color: #474747;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.resume-item-institute {
+    color: #757575;
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.resume-item-description {
+    color: #757575;
+    font-size: 14px;
+    font-weight: 400;
+}
+.download-cv{
+    text-align: center;
+    margin-top: 30px;
 }
